[project]
name = "trustfall"
version = "0.1.0"
description = "Transparent IoT TLS certificate validation test harness"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "scapy>=2.5",
  "textual>=0.60",
  "pyopenssl>=23",
]

[project.scripts]
trustfall = "trustfall.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
